--- a/eXtensionSharp.Mongo/eXtensionSharp.Mongo.csproj
+++ b/eXtensionSharp.Mongo/eXtensionSharp.Mongo.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="eXtensionSharp" Version="1.0.1.12" />
       <PackageReference Include="MongoDB.Bson" Version="3.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
     </ItemGroup>
