--- a/eXtensionSharp.Mongo/eXtensionSharp.Mongo.csproj
+++ b/eXtensionSharp.Mongo/eXtensionSharp.Mongo.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="eXtensionSharp" Version="1.0.1.12" />
-      <PackageReference Include="MongoDB.Bson" Version="3.0.0" />
-      <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
+      <PackageReference Include="MongoDB.Bson" Version="3.4.0" />
+      <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
     </ItemGroup>
 
 </Project>
