--- a/eXtensionSharp.Mongo.Test/eXtensionSharp.Mongo.Test.csproj
+++ b/eXtensionSharp.Mongo.Test/eXtensionSharp.Mongo.Test.csproj
@@ -3,13 +3,13 @@
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <IsPackable>false</IsPackable>
+        <Nullable>disable</Nullable>        
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="Mongo2Go" Version="4.1.0" />
         <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="xunit" Version="2.9.2"/>
