--- a/eXtensionSharp.Mongo.Test/eXtensionSharp.Mongo.Test.csproj
+++ b/eXtensionSharp.Mongo.Test/eXtensionSharp.Mongo.Test.csproj
@@ -3,7 +3,8 @@
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>disable</Nullable>        
+        <Nullable>disable</Nullable>      
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
